ajout de fichiers ByeWorld, HelloWorld

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,12 +4,12 @@
 	version="3.1">
 	<servlet>
 		<servlet-name>HelloWorld</servlet-name>
-		<servlet-class>co.simplon.poleEmploi.decouverteServlets.HelloWorld</servlet-class>
+		<servlet-class>co.simplon.poleEmploi.decouverte.jsp.HelloWorld</servlet-class>
 	</servlet>
 
 	<servlet>
 		<servlet-name>ByeWorld</servlet-name>
-		<servlet-class>co.simplon.poleEmploi.decouverteServlets.ByeWorld</servlet-class>
+		<servlet-class>co.simplon.poleEmploi.decouverte.jsp.ByeWorld</servlet-class>
 	</servlet>
 
 	<servlet-mapping>
